--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -56,7 +56,10 @@ spring:
   jpa:
     show-sql: true
   data:
-    elasticsearch:
+    jest:
+      uris:
+      - http://localhost:9200
+    elasticsearch:    
       properties:
         path:
           home: target/elasticsearch
